feat: initial commit

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,9 +18,6 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
+    scroll-behavior: smooth;
   }
 }
